two apis working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
 <!-- area for search box-->
         <div class='searchSection'>
-            <form role="search" action="#">
+            <form role="search" class='js-searchForm' action="#">
                 <label class='searchText' for='searchBox'> <h2>Enter Medical Condition Here:</h2></label>
                 <input type='text' class='searchBox'  id='searchBox' placeholder="condition" required >
                 <button type='submit' class='submitButton'>submit</button>
@@ -33,7 +33,7 @@
         </div>
 
 <!-- area for doctors -->
-        <div class='doctorResults'>
+        <div class='YelpResults'>
             
         </div>
 
