--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
 <!-- area for search box-->
         <div class='searchSection'>
             <form role="search" class='js-searchForm' action="#">
-                <label class='searchText' for='searchBox'> <h2>Enter Medical Condition Here:</h2></label>
-                <input type='text' class='searchBox'  id='searchBox' placeholder="condition" required >
+                <label class='searchText' for='condition'> <h2>Enter Medical Condition Here:</h2></label>
+                <link href='https://clinicaltables.nlm.nih.gov/autocomplete-lhc-versions/15.1.1/autocomplete-lhc_jQueryUI.min.css' rel="stylesheet">
+                <script src='https://clinicaltables.nlm.nih.gov/autocomplete-lhc-versions/15.1.1/autocomplete-lhc_jQuery.min.js'></script>                
+                <input type="text" class="searchBox" id="condition" placeholder="Condition">
                 <button type='submit' class='submitButton'>submit</button>
             </form>
         </div>
-      
+        <div class='jslocation'>
+
+        </div>
 <!-- area for google search results -->
         <div class='googleResults'>
             
