working model now need to streamline code

--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
                 <button type='submit' class='submitButton'>submit</button>
             </form>
         </div>
+<!-- area for location -->
         <div class='jslocation'>
 
         </div>
-<!-- area for google search results -->
+
+<!-- area for google search results
         <div class='googleResults'>
             
-        </div>
-<!-- area for youtube search results -->
+      </div> -->
+
+<!--area for youtube search results -->
         <div class='youtubeResults'>
 
         </div>
